--- a/script-opts/osc.conf
+++ b/script-opts/osc.conf
@@ -1,25 +1,46 @@
+# show osc when windowed
 showwindowed = true
+# show osc when fullscreen
 showfullscreen = true
+# scaling controller when windowed
 scalewindowed = 1
+# scaling controller when fullscreen
 scalefullscreen = 1
+# scaling when rendered on a forced window
 scaleforcedwindow = 2
+# scale the controller with the video
 vidscale = false
+# hide the OSC in ms if no mouse movement. 
+# internally negative is 'always-on'.
 hidetimeout = 1000
-
+# duration of fade out in ms, 0 means no fade
 fadeduration = 500
+# minimum amount of pixels the mouse has to
+# move between ticks to make the OSC show up
 minmousemove = 3          
-
+# use native mpv values and disable OSC
+# internal track list management (and some
+# functions that depend on it)
 iamaprogrammer = false
-                            
+# default osc title font (will fallback to regular fonts)                          
 font = 'mpv-osd-symbols'
+# size ratio of the slider handle, range 0 ~ 1
 seekbarhandlesize = 1.0
+# show seekrange overlay
 seekrange = true
+# transparency of seekranges
 seekrangealpha = 128
+# use keyframes when dragging the seekbar
 seekbarkeyframes = true
+# string compatible with property-expansion to be shown as OSC title
 title = '${media-title}'
-
+# show title and no hide timeout on pause
 showtitle = true
+# display total time instead of remaining time?
 timetotal = true
+# only used at init to set visibility_mode(...)
 visibility = 'auto'
+# whether to show window controls
 windowcontrols = 'auto'
+# eng=English, chs=Chinese
 language = 'eng'
