--- a/script-opts/osc.conf
+++ b/script-opts/osc.conf
@@ -40,7 +40,7 @@ showtitle = true
 timetotal = true
 # only used at init to set visibility_mode(...)
 visibility = 'auto'
-# whether to show window controls
-windowcontrols = 'auto'
+# whether to show window controls (auto, yes, no)
+windowcontrols = 'no'
 # eng=English, chs=Chinese
 language = 'eng'
