--- a/script-opts/osc.conf
+++ b/script-opts/osc.conf
@@ -1,7 +1,7 @@
 # show osc when windowed
-showwindowed=true
+showwindowed=yes
 # show osc when fullscreen
-showfullscreen=true
+showfullscreen=yes
 # scaling controller when windowed
 scalewindowed=1
 # scaling controller when fullscreen
@@ -9,7 +9,7 @@ scalefullscreen=1
 # scaling when rendered on a forced window
 scaleforcedwindow=2
 # scale the controller with the video
-vidscale=false
+vidscale=no
 # hide the OSC in ms if no mouse movement. 
 # internally negative is 'always-on'.
 hidetimeout=1000
@@ -21,26 +21,26 @@ minmousemove=3
 # use native mpv values and disable OSC
 # internal track list management (and some
 # functions that depend on it)
-iamaprogrammer=false
+iamaprogrammer=no
 # default osc title font (will fallback to regular fonts)                          
-font = 'mpv-osd-symbols'
+font=mpv-osd-symbols
 # size ratio of the slider handle, range 0 ~ 1
 seekbarhandlesize=1.0
 # show seekrange overlay
-seekrange=true
+seekrange=yes
 # transparency of seekranges
 seekrangealpha=128
 # use keyframes when dragging the seekbar
-seekbarkeyframes=true
+seekbarkeyframes=yes
 # string compatible with property-expansion to be shown as OSC title
-title='${media-title}'
+title=${media-title}
 # show title and no hide timeout on pause
-showtitle=true
+showtitle=yes
 # display total time instead of remaining time?
-timetotal=true
+timetotal=yes
 # only used at init to set visibility_mode(...)
-visibility='auto'
+visibility=auto
 # whether to show window controls (auto, yes, no)
-windowcontrols='no'
+windowcontrols=no
 # eng=English, chs=Chinese
-language='eng'
+language=eng
